<resources>
    <string name="app_name">NursingCare</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>


    <!-- Dummy data -->
    <string name="username_login">javi</string>
    <string name="password_login">1</string>

    <!-- description images -->
    <string name="image_description_splash_screen">Nursing Care</string>
    <string name="image_description_icon_login">Nursing Care</string>

    <!-- variables name and files -->
    <string name="variable_name_shared_preferences">user_data</string>
    <string name="variable_name_username">username</string>
    <string name="variable_name_password">password</string>

    <!-- Login Activity Text -->
    <string name="login_title">Iniciar sesión</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_user_place_holder">Ingresa su usuario</string>
    <string name="login_password_place_holder">Ingresa tu contraseña</string>
    <string name="toast_error_login_message">Credenciales incorrectas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main Activity Text -->
    <string name="action_settings">Ajustes</string>
    <string name="nav_header_desc">hola</string>
    <string name="drawer_option_perfil">Perfil</string>
    <string name="drawer_option_pacientes">Pacientes</string>
    <string name="drawer_option_guardias">Guardias</string>
    <string name="drawer_option_ganancias">Ganancias</string>
    <string name="drawer_option_home">Home</string>
    <string name="drawer_option_historial">Historial</string>
    <string name="fragment_drawer_perfil">PERFIL</string>
    <string name="fragment_drawer_pacientes">PACIENTES</string>
    <string name="fragment_drawer_guardias">GUARDIAS</string>
    <string name="fragment_drawer_ganancias">GANANCIAS</string>
    <string name="fragment_drawer_home">HOME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
