<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/drawer_option_home"/>
        <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/drawer_option_perfil"/>
        <item
                android:id="@+id/nav_pacientes"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/drawer_option_pacientes"/>
        <item
                android:id="@+id/nav_guardias"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/drawer_option_guardias"/>
        <item
                android:id="@+id/nav_ganancias"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/drawer_option_ganancias"/>
        <item
                android:id="@+id/nav_historial"
                android:title="@string/drawer_option_historial"/>
    </group>


</menu>
